--- a/source/locales/zh_TW/messages.json
+++ b/source/locales/zh_TW/messages.json
@@ -28,5 +28,17 @@
   },
   "rankNum": {
     "message": "$1位"
+  },
+  "options": {
+    "message": "选项"
+  },
+  "optionShowProgress": {
+    "message": "顯示進度條"
+  },
+  "optionIntervalTime": {
+    "message": "輪播間隔（秒）"
+  },
+  "optionClearCache": {
+    "message": "清空緩存"
   }
 }
