--- a/source/locales/en/messages.json
+++ b/source/locales/en/messages.json
@@ -26,6 +26,9 @@
   "loadFailed": {
     "message": "Load Failed"
   },
+  "downloadFailed": {
+    "message": "Download Failed"
+  },
   "rankNum": {
     "message": "No. $1"
   },
