--- a/source/locales/ja/messages.json
+++ b/source/locales/ja/messages.json
@@ -26,6 +26,9 @@
   "loadFailed": {
     "message": "読み込みに失敗しました"
   },
+  "downloadFailed": {
+    "message": "ダウンロードに失敗しました"
+  },
   "rankNum": {
     "message": "$1位"
   },
