--- a/source/locales/zh_TW/messages.json
+++ b/source/locales/zh_TW/messages.json
@@ -26,6 +26,9 @@
   "loadFailed": {
     "message": "載入失敗"
   },
+  "downloadFailed": {
+    "message": "下載失敗"
+  },
   "rankNum": {
     "message": "$1位"
   },
